clusters/homelab/media/unpackerr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: unpackerr
  namespace: media
  labels:
    app: unpackerr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: unpackerr
  template:
    metadata:
      labels:
        app: unpackerr
    spec:
      containers:
        - name: unpackerr
          image: golift/unpackerr:0.15.2
          volumeMounts:
            - name: media
              mountPath: /data
          resources:
            requests:
              memory: 64Mi
              cpu: 25m
            limits:
              memory: 256Mi
              cpu: 250m
      volumes:
        - name: media
          persistentVolumeClaim:
            claimName: media-nfs
